Updated Logger in AppointmentScheduling to use its own class and enforced rule java:S6204